selfhost/test/parser/set_error_eof.out
Error at %FILE_NAME%:1:7
Unexpected end of file:
  |  #{1, 2
           ^